# features-extraction

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
docs/: audio.md  vision.md
examples/: demo.py  demo_detection.py  demo_kfold.py  demo_recognize.py  demo_train.py
experiment/: extract_face_features.py  train_and_eval.py
models/: simple.py
reports/: main.typ  utils.typ
reports/sections/: audio.typ  face.typ  video.typ
src/: utils.py
src/audio/: utils.py
src/examples/: demo_detection.py  demo_kfold.py  demo_opensmile.py  demo_recognize.py  demo_train.py
src/examples/audio/: extract_audio_features.py  train_and_eval.py  train_and_eval_variable_length.py
src/examples/face/: extract_face_features.py  train_and_eval.py
src/examples/video/: preprocess.py  train_and_eval.py
src/examples/vision/: extract_face_features.py  train_and_eval.py
src/experiments/vision/: extract_face_features.py  train_and_eval.py
src/extractor/: utils.py
src/extractor/audio/: utils.py
src/extractor/dataset/: audio.py  face.py  utils.py  video.py
src/extractor/vision/: utils.py
src/model/: __init__.py  simple.py
src/vision/: extract_face_features.py  train_and_eval.py
tools/: dataset.py  extract_face_features.py  utils.py
