[project]
name = "face-recognition"
version = "0.0.0"
description = ""
authors = [
    {name = "Zhan Rongrui", email = "2742392377@qq.com"},
]
dependencies = [
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://pypi.org/project/face-recognition"
Repository = "https://github.com/zrr1999/face-recognition.git"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
ignore = [
    "F841"
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I002"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
