[project]
name = "face-recognition"
version = "0.1.0"
description = ""
authors = [
    {name = "Zhan Rongrui", email = "2742392377@qq.com"},
]
dependencies = [
  "loguru",
  "rich",
  # "torch>=2.1.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
vision = [
  "dlib",
  "mediapipe",
  "deepface"
]
audio = [
  "opensmile"
]
text = [

]

all = [
  "face-recognition[vision,audio,text]"
]

[project.urls]
Homepage = "https://pypi.org/project/face-recognition"
Repository = "https://github.com/zrr1999/face-recognition.git"

[tool.ruff]
line-length = 120
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
select = [
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
ignore = [
    "F841"
]

[tool.ruff.lint.isort]
known-first-party = ["extractor", "model"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I002"]

[tool.pdm.build]
package-dir = "src"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
